# SWTOR-NPC-PATHS-CONVERTER

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: funcs.rs  main.rs  types.rs
